# CS323-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  judge.sh
.github/workflows/: cmake.yml
demo_test/: test_symbolTable.cpp  test_syntaxTree.cpp  test_token.cpp
problematic_test/: test_1_r01.spl  test_1_r02.spl
project1_test/: test_11811620_5.out
project1_test/test/: test_11811620_3.out
project1_test/test-ex/: test_1.out  test_3_1.spl
project2_simple/: test02.spl  test03.spl  test05.spl
project2_test/project2_bonus/: test02.out  test03.out  test04.spl  test06.out
project2_test/test/: test_11811620_1.spl  test_11811620_10.out  test_11811620_10.spl  test_11811620_2.out  test_11811620_2.spl  test_11811620_2.test.out  test_11811620_3.out  test_11811620_3.spl  test_11811620_4.out  test_11811620_4.spl  test_11811620_4.test.out  test_11811620_5.out  test_11811620_5.spl  test_11811620_6.out  test_11811620_6.spl  test_11811620_6.test.out  test_11811620_7.out  test_11811620_7.spl  test_11811620_8.out  test_11811620_8.spl  test_11811620_9.spl
project2_test/test-ex/: test_1.spl  test_10.out  test_10.spl  test_2.out  test_2.spl  test_3.out  test_3.spl  test_4.out  test_4.spl  test_5.out  test_5.spl  test_6.out  test_6.spl  test_7.out  test_7.spl  test_8.out  test_8.spl  test_9.out  test_9.spl
project3_test/sample/: test01.spl
project3_test/test/: test_3_r11.spl
project4/: main.c  mips32.c  mips32.h  tac.c  tac.h  variableLInkedLIst.h  variableLinkedList.c
project4/test/: test_4_r01.ir  test_4_r01.s  test_4_r01.spl  test_4_r02.s  test_4_r03.s
report/: 11811535-project1.md  Project3-Report.md  Project4-Report.md
report/project1/: 11811620-project1.md
report/project2/: 11811535-project2.md
src/: IntermediateCode.cpp  IntermediateCode.h  IntermediateCodeTranlator.cpp  IntermediateCodeTranlator.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  SyntaxTreeNode.cc  SyntaxTreeNode.cpp  SyntaxTreeNode.h  SyntaxTreeNode.hh  ir_optimizer.cpp  ir_optimizer.h  lex.l  lexer.l  main.cpp  parser.cpp  parser.hpp  parser.output  parser.y  parserMain.cc  parserMain.cpp  testInitializeList.cpp  token.cpp  token.h
test/: mzttest.out  mzytest.spl  test_11811535_1.out  test_11811535_2.out  test_11811535_2.spl  test_11811535_3.out  test_11811535_3.spl  test_11811535_4.out  test_11811535_4.spl  test_11811535_5.out  test_11811535_5.spl  test_11811620_1.out  test_11811620_1.spl  test_11811620_2.out  test_11811620_3.spl  test_11811620_4.out  test_lexer.cpp  test_syntaxTree.cpp  test_token.cpp
test-ex/: test_02.spl  test_1.out  test_1.spl  test_2.out  test_2.spl  test_3.out  test_3.spl
test_executable/: test_symbolTable.cpp  test_syntaxTree.cpp
